--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@types/d3-selection": "^3.0.11",
+    "@types/d3-zoom": "^3.0.8",
+    "d3-selection": "^3.0.0",
+    "d3-zoom": "^3.0.0",
     "framer-motion": "^12.23.24",
     "leva": "^0.10.1",
     "react": "^18.2.0",
